--- a/docs/latex_rapport/sections/abstract.tex
+++ b/docs/latex_rapport/sections/abstract.tex
@@ -7,5 +7,12 @@
 
 
 \begin{document}
-    Here is abstract
+    The following project is made for the purpose of producing a standard danish monopoly game, for IOOuterActive. Explained throughout the report is a combined process of implementation of the program, and documentation through communication practices. The implemented program is inspired by some earlier assignments for IOOuterActive. \par
+
+    This report will start of with a minor introduction to the assigned task, followed by a prioritized list of requirements for the completion of the program, in addition to some possible extensive requirements for the system, which consists primarily of the monopoly game’s rules. Immediately following, is an overview of which of the requirements and extensions are implemented in the attached program. Elaborating the meaning of the functional requirements is first a use case diagram, showing the different use case relations between each use case and the player of the game. Afterwards, the use cases are written as a guide to a conceptual playthrough of the game. \par
+    Further explaining of the conceptual phase of the development is illustrated in a domain model. \par
+    Leading out of the conceptual phase of development, a more programming oriented approach is initiated, and a viewpoint with software classes and operations is exemplified through diagrams and text. Further introduction to specific program sections is also dynamically illustrated in form of sequence diagrams, to benefit an understanding of central or complicated elements. Thereafter a clarification of relevant Programming Patterns used in the development is explained. Winding-up is documentation of the programmed game through tests, followed by the finishing conclusion of the project. \par
+
+    Additionally, there is a quick guide to opening the file containing the program.
+
 \end{document}
