--- a/docs/latex_rapport/sections/introduction.tex
+++ b/docs/latex_rapport/sections/introduction.tex
@@ -7,5 +7,5 @@
 
 
 \begin{document}
-   Her er intro.....
+   I følgende rapport vil vi beskrive udviklingen af et dansk matadorspil med det tilhørende almindelige danske regelsæt. Dette er udviklet til kunden, IOOuterActive, som har anmodet at modtage et fungerende matadorspil, der kan køres på DTU’s computere i Databar. Vi har før beskæftiget os med projekter med lignende features, også under arbejde for IOOuterActive, hvorfra nogle elementer vil blive omskrevet og anvendt i dette projekt, for at ende ud med et mere gennemført program. Spillet konstrueres, ud fra instruktion af kunden, således at fokus er på, at der kan udføres et gennemført forløb af et spil. Dette betyder at de vigtigste krav til udviklingsprocessen er de spilleregler, som er nødvendige for, at der kan findes en vinder, og de grundlæggende elementer i et matadorspil. Fokus er på selve programmet, men der vil i rapporten være passende med kommunikationsværktøjer, for at forstå både projekt og programkode, hvilket bør bidrage til en forståelse applikabel til videreudvikling. Kravene for programmet vil først blive introduceret, sammen med mulige udvidelser. Følgende vil koden blive vist og dokumenteret, bl.a. med forklaringer af hvordan programmet er testet, hvorefter der gives en konklusion på projektets udførsel og forløb.
 \end{document}
