--- a/docs/latex_rapport/test_cases/acceptence_test.tex
+++ b/docs/latex_rapport/test_cases/acceptence_test.tex
@@ -24,6 +24,9 @@
 % Document
 \begin{document}
 
+    Følgende er vist en liste over de features, der til de forskellige use cases er godkendt som implementerede. Dette har vi testet ved alpha black box testing, hvor vi har anvendt GUI’en til at se resultatet af de forskellige testscenarier. \par
+    ‘UC5: Pantsæt grund’, og ‘UC6: Ophæv pantsætning’ er medtaget i testene, da de ikke blev implementeret.
+
     \begin{table}[H]
         \caption{Acceptance test på UC1: Opret spillere }
         \begin{tabularx}{\textwidth}{|X|l|}
