--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -44,7 +44,7 @@
 \clearpage
 \setcounter{page}{1}
 
-\section{Introduktion}
+\section{Indledning}
 \import{sections/}{introduction}
 
 \section{Analyse}
