added description on SD

--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -87,6 +87,7 @@
 \import{artifacts/}{pakkediagram}
 \newpage
 \subsection{Sekvensdiagrammer}
+\import{artifacts/}{sd}
 %\newpage
 \subsection{Klassediagram}
 %\import{artifacts/}{DKD}
