--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -75,6 +75,9 @@
 \import{use_cases/}{UC9_byg_hotel}
 \import{use_cases/}{UC10_gaa_fallit}
 \newpage
+\subsection{Aktivitetsdiagram}
+\import{artifacts/}{aktivitetsdiagram}
+\newpage
 \subsection{Domænmodel}
 \import{artifacts/}{domain_model}
 \newpage
@@ -88,10 +91,10 @@
 \newpage
 \subsection{Sekvensdiagrammer}
 \import{artifacts/}{sd}
-%\newpage
-\subsection{Klassediagram}
-%\import{artifacts/}{DKD}
-
+\newpage
+\subsection{Designklassediagram}
+\import{artifacts/}{DKD}
+\newpage
 \section{Implementering}
 \subsection{Kodeprocessen}
 \import{sections/}{kodeprocessen}
@@ -102,7 +105,7 @@
 \subsection{Unit testing}
 \import{test_cases/}{TC1_setNumberOfSiblingTest}
 \import{test_cases/}{TC2_setCorrectSiblingsTest}
-\subsection{Itegration testing}
+% \subsection{Itegration testing}
 
 \subsection{Internal Acceptance Testing}
 \import{test_cases/}{acceptence_test}
