--- a/docs/latex_rapport/test_cases/acceptence_test.tex
+++ b/docs/latex_rapport/test_cases/acceptence_test.tex
@@ -32,10 +32,10 @@
         \begin{tabularx}{\textwidth}{|X|l|}
             \hline
             \textbf{Test scenarie}       & \textbf{Bestået}   \\ \hline
-            Der bliver vist en læselig instruktion til oprettelse af spillere på spillepladen     & - \\ \hline
-            Der må kun accepteres input af 3 til 6 spillere    & - \\ \hline
-            Spillerne kan på tur indtaste deres navn, som bliver vist og brugt på spillepladen igennem hele spillets forløb     & -  \\ \hline
-            Spillere kan godt hede det samme, og vil bare blive tildelt forskellige farver     & - \\ \hline
+            Der bliver vist en læselig instruktion til oprettelse af spillere på spillepladen     & JA \\ \hline
+            Der må kun accepteres input af 3 til 6 spillere    & JA \\ \hline
+            Spillerne kan på tur indtaste deres navn, som bliver vist og brugt på spillepladen igennem hele spillets forløb     & JA  \\ \hline
+            Spillere kan godt hede det samme, og vil bare blive tildelt forskellige farver     & JA \\ \hline
         \end{tabularx}
     \end{table}
 
@@ -45,11 +45,10 @@
         \begin{tabularx}{\textwidth}{|X|l|}
             \hline
             \textbf{Test scenarie}       & \textbf{Bestået}   \\ \hline
-            Hvis spilleren er landet på en ikke-ejet ejendom, og har penge nok til at købe den, kan spilleren vælge at købe den    & - \\ \hline
-            Grunde der ejes af en spiller får en rammefarve der svarer til pågældende spillers farve på spillepladen    & - \\ \hline
-            Ejes alle ejendomme i en gruppe, fordobles lejeprisen på alle ejendommene     & -  \\ \hline
-            Der tilføjes et skøde med information om den købte ejendom til køberen     & - \\ \hline
-            Auktion    & NEJ \\ \hline
+            Hvis spilleren er landet på en ikke-ejet ejendom, og har penge nok til at købe den, kan spilleren vælge at købe den    & JA \\ \hline
+            Grunde der ejes af en spiller får en rammefarve der svarer til pågældende spillers farve på spillepladen    & JA \\ \hline
+            Ejes alle ejendomme i en gruppe, fordobles lejeprisen på alle ejendommene     & JA  \\ \hline
+            Der tilføjes et skøde med information om den købte ejendom til køberen     & JA \\ \hline
         \end{tabularx}
     \end{table}
 
@@ -59,10 +58,10 @@
         \begin{tabularx}{\textwidth}{|X|l|}
             \hline
             \textbf{Test scenarie}       & \textbf{Bestået}   \\ \hline
-            Spiller kan betale 50kr, for at komme ud af fængslet uden at miste den daværende tur & - \\ \hline
-            Spiller kan komme ud af fængslet ved at bruge et terningeslag til at slå 2 ens& - \\ \hline
-            Spiller kan maksimalt prøve at slå 2 ens 3 ture, hvorefter spilleren er tvunget til at betale de 50kr, for at blive løsladt. & -  \\ \hline
-            Ved løsladelse ved førnævnte tvungne betaling, rykker spilleren det antal øjne, som der blev slået ved sidste forsøg på at slå 2 ens  & - \\ \hline
+            Spiller kan betale 50kr, for at komme ud af fængslet uden at miste den daværende tur & JA \\ \hline
+            Spiller kan komme ud af fængslet ved at bruge et terningeslag til at slå 2 ens& JA \\ \hline
+            Spiller kan maksimalt prøve at slå 2 ens 3 ture, hvorefter spilleren er tvunget til at betale de 50kr, for at blive løsladt. & JA \\ \hline
+            Ved løsladelse ved førnævnte tvungne betaling, rykker spilleren det antal øjne, som der blev slået ved sidste forsøg på at slå 2 ens  & JA \\ \hline
         \end{tabularx}
     \end{table}
 
@@ -71,10 +70,10 @@
         \begin{tabularx}{\textwidth}{|X|l|}
             \hline
             \textbf{Test scenarie}       & \textbf{Bestået}   \\ \hline
-            Når en spiller lander på et “Prøv lykken” felt på spillepladen, vises et tilfældigt kort fra kortsamlingen i programmet & - \\ \hline
-            Der vises en læselig besked med situationen fra lykkekorten på spillepladen & - \\ \hline
-            Spillet udfører det pågældende scenarie fra lykkekortet  & -  \\ \hline
-            Hvis spiller trækker et lykkekort, der kan løslade pågældende spiller fra fængsel, skal spilleren kunne bruge dette kort til at komme ud en gang, hvis spilleren senere er i fængsel  & - \\ \hline
+            Når en spiller lander på et “Prøv lykken” felt på spillepladen, vises et tilfældigt kort fra kortsamlingen i programmet & JA \\ \hline
+            Der vises en læselig besked med situationen fra lykkekorten på spillepladen & JA \\ \hline
+            Spillet udfører det pågældende scenarie fra lykkekortet  & JA  \\ \hline
+            Hvis spiller trækker et lykkekort, der kan løslade pågældende spiller fra fængsel, skal spilleren kunne bruge dette kort til at komme ud en gang, hvis spilleren senere er i fængsel  & JA \\ \hline
         \end{tabularx}
     \end{table}
 
@@ -85,11 +84,11 @@
         \begin{tabularx}{\textwidth}{|X|l|}
             \hline
             \textbf{Test scenarie}       & \textbf{Bestået}   \\ \hline
-            Indsætter et korrekt beløb på spillerens konto ved salg af hus     & - \\ \hline
-            Må ikke kunne sælges, så der er ujævn fordeling     & - \\ \hline
-            Huset fjernes fra grunden på spillepladen     & - \\ \hline
-            Lejeprisen opdateres     & -\\ \hline
-            Ved salg af hotel, fjernes hotellet, og 4 huse tilføjes, på grunden på spillepladen    & - \\ \hline
+            Indsætter et korrekt beløb på spillerens konto ved salg af hus     & JA \\ \hline
+            Må ikke kunne sælges, så der er ujævn fordeling     & JA \\ \hline
+            Huset fjernes fra grunden på spillepladen     & JA \\ \hline
+            Lejeprisen opdateres     & JA\\ \hline
+            Ved salg af hotel, fjernes hotellet, og 4 huse tilføjes, på grunden på spillepladen    & JA \\ \hline
         \end{tabularx}
     \end{table}
 
@@ -98,12 +97,12 @@
         \begin{tabularx}{\textwidth}{|X|l|}
             \hline
             \textbf{Test scenarie}       & \textbf{Bestået}   \\ \hline
-            Må kun bygges på grunde, hvor alle ejendomme i gruppen er ejer af den samme spiller     & - \\ \hline
-            Tilføjer en hus på grunden på spillepladen     & -\\ \hline
-            Maksimum 4 huse må bygges på en grund     & -\\ \hline
-            Må ikke kunne bygges ujævnt     & -\\ \hline
-            Trækkes et korrekt beløb fra spillerens konto ved køb af hus     & -\\ \hline
-            Lejeprisen opdateres     & - \\ \hline
+            Må kun bygges på grunde, hvor alle ejendomme i gruppen er ejer af den samme spiller     & JA \\ \hline
+            Tilføjer en hus på grunden på spillepladen     & JA\\ \hline
+            Maksimum 4 huse må bygges på en grund     & JA\\ \hline
+            Må ikke kunne bygges ujævnt     & JA\\ \hline
+            Trækkes et korrekt beløb fra spillerens konto ved køb af hus     & JA\\ \hline
+            Lejeprisen opdateres     & JA \\ \hline
         \end{tabularx}
     \end{table}
 
@@ -113,11 +112,11 @@
         \begin{tabularx}{\textwidth}{|X|l|}
             \hline
             \textbf{Test scenarie}       & \textbf{Bestået}   \\ \hline
-            Må kun bygges på en grund ejet af en spiller med nok penge og 4 huse på alle grunde i den pågældende grunds gruppe     & - \\ \hline
-            Fjerner de 4 huse og tilføjer et hotel på grunden     & -\\ \hline
-            Der må maksimum være et hotel på hver grund     & -\\ \hline
-            Der trækkes et korrekt beløb fra spillerens konto ved køb af hotel     & -\\ \hline
-            Lejeprisen opdateres     & - \\ \hline
+            Må kun bygges på en grund ejet af en spiller med nok penge og 4 huse på alle grunde i den pågældende grunds gruppe     & JA \\ \hline
+            Fjerner de 4 huse og tilføjer et hotel på grunden     & JA\\ \hline
+            Der må maksimum være et hotel på hver grund     & JA\\ \hline
+            Der trækkes et korrekt beløb fra spillerens konto ved køb af hotel     & JA\\ \hline
+            Lejeprisen opdateres     & JA \\ \hline
         \end{tabularx}
     \end{table}
 
@@ -126,11 +125,11 @@
         \begin{tabularx}{\textwidth}{|X|l|}
             \hline
             \textbf{Test scenarie}       & \textbf{Bestået}   \\ \hline
-            Overføres grundene, som er ejet af spilleren til en kreditor (enten den anden spiller, som spilleren, der går fallit skylder penge, eller banken) & - \\ \hline
-            Grundenes rammefarve opdateres til den nye ejers farve på spillepladen & -\\ \hline
-            Lejeprisen på felter updates, hvis de overførte grunde fra en spiller, der er gået fallit gør at alle felter i en gruppe ejes (opdateres også på spillepladen) & -\\ \hline
-            Hvis alle undtagen en spiller er gået fallit, udnævnes en vinder& -\\ \hline
-            En spiller må ikke længere interegere længere med spillet, efter spilleren er gået fallit. Inklusive at administrere ejendomme.& - \\ \hline
+            Overføres grundene, som er ejet af spilleren til en kreditor (enten den anden spiller, som spilleren, der går fallit skylder penge, eller banken) & JA\\ \hline
+            Grundenes rammefarve opdateres til den nye ejers farve på spillepladen & JA\\ \hline
+            Lejeprisen på felter updates, hvis de overførte grunde fra en spiller, der er gået fallit gør at alle felter i en gruppe ejes (opdateres også på spillepladen) & JA\\ \hline
+            Hvis alle undtagen en spiller er gået fallit, udnævnes en vinder& JA\\ \hline
+            En spiller må ikke længere interegere længere med spillet, efter spilleren er gået fallit. Inklusive at administrere ejendomme.& JA \\ \hline
         \end{tabularx}
     \end{table}
 
