--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -96,10 +96,10 @@
 \import{artifacts/}{DKD}
 \newpage
 \section{Implementering}
-\subsection{Kodeprocessen}
-\import{sections/}{kodeprocessen}
 \subsection{Visitor pattern}
 \import{sections/}{visitor_pattern}
+\subsection{ArrayList}
+\import{sections/}{arraylist}
 \newpage
 \section{Testing}
 \subsection{Unit testing}
@@ -111,21 +111,23 @@
 \import{test_cases/}{acceptence_test}
 
 \section{Konklution}
-\import{sections/}{konklusion}
-test
-
+%\import{sections/}{konklusion}
 \newpage
 \section*{Ordbog}
 \addcontentsline{toc}{section}{Ordbog}
 
 \import{artifacts/}{ordbog}
 
-
-
-
 \newpage
 \cleardoublepage
 \printbibliography[heading=bibintoc]
 }
+
+\newpage
+%\section*{Vejledning til at åbne spillet}
+%\addcontentsline{toc}{section}{Vejledning til at åbne spillet}
+
+%\import{sections/}{vejledning_aabne_spillet}
+
 
 \end{document}
