konklusion og reflektioner is added

--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -111,7 +111,9 @@
 \import{test_cases/}{acceptence_test}
 
 \section{Konklution}
-%\import{sections/}{konklusion}
+\import{sections/}{konklusion}
+\section{Reflektioner}
+\import{sections/}{refleksioner}
 \newpage
 \section*{Ordbog}
 \addcontentsline{toc}{section}{Ordbog}
@@ -124,10 +126,10 @@
 }
 
 \newpage
-%\section*{Vejledning til at åbne spillet}
-%\addcontentsline{toc}{section}{Vejledning til at åbne spillet}
+\section*{Vejledning til at åbne spillet}
+\addcontentsline{toc}{section}{Vejledning til at åbne spillet}
 
-%\import{sections/}{vejledning_aabne_spillet}
+\import{sections/}{vejledning_aabne_spillet}
 
 
 \end{document}
