--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -100,6 +100,7 @@
 \import{sections/}{visitor_pattern}
 \subsection{ArrayList}
 \import{sections/}{arraylist}
+\subsection{Branching strategi}
 \newpage
 \section{Testing}
 \subsection{Unit testing}
