--- a/docs/latex_rapport/artifacts/interessent_analyse.tex
+++ b/docs/latex_rapport/artifacts/interessent_analyse.tex
@@ -36,8 +36,8 @@
 
 
             \savespace \begin{compactitem}
-                           \item At modtage et velfungerende spil med lave omkostninger, og ikke mindst til tiden.
-                           \item Velskrevet og egneder sig til videreudvikling.
+                           \item At modtage et velfungerende spil med lave omkostninger, og til tiden.
+                           \item At programmet med spillet skal være velskrevet og egner sig til videreudvikling.
             \end{compactitem}
 
             \\ \hline
@@ -54,7 +54,7 @@
 
             \rowcolor[gray]{.8}
             \textbf{Aktør}& \textbf{Mål}   \\ \hline
-            \textbf{Spiller}      & At spille et underholdende spil\\ \hline
+            \textbf{Spiller}      & At spille et underholdende spil.\\ \hline
 
 
         \end{tabularx}
