--- a/docs/latex_rapport/artifacts/kravliste.tex
+++ b/docs/latex_rapport/artifacts/kravliste.tex
@@ -44,7 +44,7 @@
 
 \begin{document}
 \reqinit
-\paragraph{Prioriteret funktional-krav liste \cite{spilleregler}}
+\paragraph{Prioriteret funktionel-krav liste \cite{spilleregler}}
 \subparagraph{Must have}
 \reqstart
 \item Der skal kun være 3-6 spillere.
@@ -52,16 +52,16 @@
 \item En spiller starter på 'Start' felt.
 \item En spiller får 200kr, hver gang spiller kommer til, eller passerer 'Start'.
 \item En spiller kaster terning og flytter sin brik så mange felter frem (med uret), som øjnene viser.
-\item En spiller skal kunne få en ekstra tur, hvis spilleren kaster 2 ens.
-\item Hver spiller skal kunne købe en grund til prisen, som står på feltet, hver gang spilleren lander på en grund, som ikke ejes af nogen, og spilleren har penge nok.
-\item Når en spiller lander på en grund, der ejes af en anden spiller, skal spilleren betale leje til ejeren af feltet.
-\item Når en spiller lander på 'Til Fængsel', rykkes der videre til 'Fængsel'. Spilleren modtager yderligere ikke 200kr, når 'Start' passeres.
-\item Hvis en spiller lander på feltet 'Fængsel', er spilleren på besøg og kan fortsætte uden straf.
-\item En spiller skal kunne komme ud af fængslet ved at kaste 2 ens, og spilleren får derved også en ekstra tur.
+\item En spiller får en ekstra tur, hvis spilleren kaster 2 ens.
+\item Hver spiller skal kunne købe en grund til prisen, som står på feltet, hver gang spilleren lander på et ejendoms-felt, som ikke ejes af nogen, og spilleren har penge nok.
+\item Når en spiller lander på et ejendoms-felt, der ejes af en anden spiller, skal spilleren betale leje til ejeren af feltet.
+\item Når en spiller lander på 'Til Fængsel', rykkes der videre til 'Fængsel'. Spilleren modtager ikke 200kr, når 'Start' passeres.
+\item Hvis en spiller lander på feltet 'Fængsel', er spilleren på besøg, og kan fortsætte uden straf.
+\item En spiller skal kunne komme ud af fængslet ved at kaste 2 ens. Spilleren rykker det antal øjne, terninger viser, og får også en ekstra tur.
 \item En spiller kan komme ud af fængslet ved at betale en bøde på 50kr, inden spiller kaster.
-\item En spiller skal kunne lande på 'Helle' og fortsætter derfra ved næste kast.
+\item En spiller skal kunne lande på 'Helle' og fortsætte derfra ved næste kast.
 \item Når en spiller skylder mere end han ejer, går spilleren fallit, og må forlade spillet.
-\item En spiller har ret til når som helst at bygge huse, når spilleren ejer alle grundene i samme farvegruppe. Husene skal bygges jævnt, dvs. det første hus kan spilleren opføre på hvilken grund i gruppen, spiller ønsker. Men inden hus nr. 2 opføres på en grund, skal der være bygget ét på hver af de andre grunde i farvegruppen osv.
+\item En spiller har ret til, når som helst, at bygge huse, når spilleren har penge nok og ejer alle grundene i samme farvegruppe. Husene skal bygges jævnt, dvs. det første hus kan spilleren bygge på hvilken som helst grund i gruppen, spiller ønsker. Men inden hus nr. 2 opføres på en grund, skal der være bygget ét på hver af de andre grunde i farvegruppen osv.
 \item En spiller skal kunne bygge et hotel, når spilleren har fire huse på hver grund i samme farve. Spilleren skal aflevere disse fire huse til banken. Spilleren må kun bygge ét hotel på hver grund. Prisen for et hotel er den samme som for et hus.
 \item Lejesummen forøges betydeligt ved opførelse af hus og hotel.
 \item Ejer en spiller alle grundene i samme farvegruppe, får man dobbelt leje af de ubebyggede grunde
@@ -80,7 +80,7 @@
 \reqstart
 \item Banken skal kunne sætte en grund på auktion, hvis spilleren der lander på grunden ikke vil købe den.
 \item En spiller skal kunne pantsætte en eller flere grunde til banken, for at modtage pantsætningsværdien. Hvis spilleren har bygninger på grundene, skal spilleren først sælge disse til banken. Af pantsat ejendom kan der ikke kræves leje. Renten er 10\%, der betales sammen med lånet, når pantsætningen ophæves.
-\item Hvis en pantsat ejendom sælges, og køberen ikke straks hæver pantsætningen, skal vedkommende alligevel betale 10\%. Hvis han senere ophæver pantsætningen, skal spilleren betale 10\% oven i ophævningsprisen som normalt.
+\item Hvis en pantsat ejendom sælges, og køberen ikke straks hæver pantsætningen, skal køberen alligevel betale 10\%. Hvis han senere ophæver pantsætningen, skal spilleren betale 10\% oven i ophævningsprisen som normalt.
 \item En spiller skal kunne sælge huse til banken til halv pris, når som helst en spiller ønsker, under sin egen tur.
 \item En spiller får udleveret skødet, når spilleren køber en grund. Skødet skal være synligt for alle spillere.
 \item Den fængslede spiller har ret til at købe grunde, der sættes til salg via auktion.
@@ -88,7 +88,7 @@
 \reqend
 \subparagraph{Wont have}
 \reqstart
-\item Spillet skal indholde 32 grønne huse og 12 røde hoteller, hvilket betyder, at hvis banken ikke har nogen bygninger, når en spiller vil købe, så må spilleren vente til der kommer nogen tilbage. Er der flere, der vil købe, og banken ikke har nok bygninger, sætter den bygningerne til auktion.
+\item Spillet skal indholde 32 grønne huse og 12 røde hoteller, hvilket betyder, at hvis banken ikke har nogen bygninger, når en spiller vil købe, så må spilleren vente til der kommer nogen tilbage.
 \reqend
 
 \paragraph{Supplerende specifikationer}
