--- a/docs/latex_rapport/sections/vision.tex
+++ b/docs/latex_rapport/sections/vision.tex
@@ -7,5 +7,5 @@
 
 
 \begin{document}
-    Projektet går ud på at lave et velfungerende program for et matadorspil med det universelle danske regelsæt med 3-6 spillere. Kunnen er IOOuterActive, som vi også tidligere har arbejdet for i tidligere projekter. Det er forventet, at der prioriteres kvalitet over kvantitet under implementeringen, og at slutresultatet bliver et funktionelt spil uden ufærdige dele, som gør, at spillet ikke kan fungere. Sproget spillet kommunikerer på ønskes at være dansk, men det ville være et plus, hvis opdelingen i programmet forekommer, så der let kan oversættes til andre sprog uden for høje kvalifikationskrav.
+    Projektet går ud på at lave et velfungerende program for et matadorspil med det universelle danske regelsæt med 3-6 spillere. Kunnen er IOOuterActive, som vi også har arbejdet for i tidligere projekter. Det er forventet, at der prioriteres kvalitet over kvantitet under implementeringen, og at slutresultatet bliver et funktionelt spil uden ufærdige dele, som gør, at spillet ikke kan fungere. Sproget spillet kommunikerer på ønskes at være dansk, men det ville være et plus, hvis opdelingen i programmet forekommer, så der let kan oversættes til andre sprog uden for høje kvalifikationskrav til oversætteren.
 \end{document}
