--- a/docs/latex_rapport/sections/visitor_pattern.tex
+++ b/docs/latex_rapport/sections/visitor_pattern.tex
@@ -29,5 +29,5 @@
 
 
        \paragraph{Bagside \newline}
-        Det er dog en bagside ved at bruge Visitor pattern, at der skal tilføjes en ny handleSquare() metode, hver gang der tilføjes en ny felt-type, som kommer til at være som en parameter i denne handleSquare() metode. Det er dog ret usandsynligt, at der kommer flere felter, da felterne i et matador-regelsæt er ret universale.
+        En bagside ved at bruge Visitor pattern, er at der skal tilføjes en ny handleSquare() metode, hver gang der tilføjes en ny felt-type, som kommer til at være som en parameter i denne handleSquare() metode. Det er dog ret usandsynligt, at der kommer flere felter, da felterne i et matador-regelsæt er ret universelle.
 \end{document}
