--- a/docs/latex_rapport/use_cases/UC11_kast_terninger.tex
+++ b/docs/latex_rapport/use_cases/UC11_kast_terninger.tex
@@ -31,7 +31,7 @@
             \hline
             & \textbf{[UC11]: Kast terninger}   \\ \hline
             \textbf{Preconditions}       & Spillet er klar og alle spillere er oprettet\\ \hline
-            \textbf{Postconditions}      & Spiller har slået med terningerne og lander på et felt\\ \hline
+            \textbf{Postconditions}      & Spiller har slået med terningerne og står på et felt\\ \hline
 
 
             \textbf{Basic Flow} & \begin{tabenum}
