--- a/docs/latex_rapport/use_cases/UC4_proev_lykken.tex
+++ b/docs/latex_rapport/use_cases/UC4_proev_lykken.tex
@@ -31,7 +31,7 @@
             \hline
             & \textbf{[UC4]: Prøv lykken}   \\ \hline
             \textbf{Preconditions}       & Spiller er landet på feltet 'Prøv lykken'\\ \hline
-            \textbf{Postconditions}      & Scenariet for et lykkekort er udført på spilleren\\ \hline
+            \textbf{Postconditions}      & Scenariet for et lykkekort er udført for spilleren\\ \hline
 
 
             \textbf{Basic Flow} & \begin{tabenum}
