--- a/docs/latex_rapport/use_cases/UC5_pantsaette_hus.tex
+++ b/docs/latex_rapport/use_cases/UC5_pantsaette_hus.tex
@@ -36,7 +36,7 @@
 
             \textbf{Basic Flow} & \begin{tabenum}
                                       \item Spiller vælger at pantsætte sin grund
-                                      \item Systemet tilføjer det beløb, der står på skødet, til spillerens konto og ændrer grunden til 'ikke kan kræves leje'.
+                                      \item Systemet tilføjer det beløb, der står på skødet, til spillerens konto og ændrer grunden til 'kan ikke kræves leje'.
             \end{tabenum}   \\ \hline
 
 
