--- a/docs/latex_rapport/use_cases/UC7_saelge_ejendom.tex
+++ b/docs/latex_rapport/use_cases/UC7_saelge_ejendom.tex
@@ -35,7 +35,7 @@
 
 
             \textbf{Basic Flow} & \begin{tabenum}
-                                      \item Spiller vælger en bygning, som skal sælges.
+                                      \item Spiller vælger et jævnt antal bygninger på hver grund bygning, som skal sælges.
                                       \item Systemet tilføjer 50\% af bygningens værdi til spilleren's konto.
             \end{tabenum}   \\ \hline
 
