--- a/docs/latex_rapport/use_cases/UC8_byg_hus.tex
+++ b/docs/latex_rapport/use_cases/UC8_byg_hus.tex
@@ -30,7 +30,7 @@
         \begin{tabularx}{\textwidth}{|l|X|}
             \hline
             & \textbf{[UC8]: Byg hus}   \\ \hline
-            \textbf{Preconditions}       & Spiller ejer alle grunde i samme farve, har penge nok.\\ \hline
+            \textbf{Preconditions}       & Spiller ejer alle grunde i samme farve, har penge nok og enten ingen eller et jævnt antal huse fordelt på grundene\\ \hline
             \textbf{Postconditions}      & Huset er bygget på spilleren's grund\\ \hline
 
 
@@ -38,7 +38,7 @@
                                       \item Spiller vælger til at bygge en bygning
                                       \item Systemet viser grunde, hvor spiller må bygge et hus.
                                       \item Spiller vælger en grund.
-                                      \item Systemet fjerner et beløb jf. skøderne fra spillerens konto, tilføjer huset til grunden og øger lejeprisen.
+                                      \item Systemet fjerner et beløb jf. skøderne, fra spillerens konto, tilføjer huset til grunden og øger lejeprisen.
             \end{tabenum}   \\ \hline
 
         \end{tabularx}
